# NISE_2017

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Compile.md  LICENSE  README.md  findFFTW.cmake
Manual/: NISE3.1.tex  techniques.tex  tlcpub2.bst
NISE3.1/: 1DFFT.c  1DFFT.h  2DFFT.c  CMakeLists.txt  NISE3.1  NISE3.1.c  NISE3.1subs.c  NISE3.1subs.h  absorption.c  analyse.c  analyse.h  c_absorption.c  c_absorption.h  calc_2DES.c  calc_2DIR.c  calc_CD.c  calc_CD.h  lapack.h  luminescence.c  luminescence.h  makefile  makefile_old  polar.c  polar.h  population.c  randomlib.c  readinput.c  readinput.h  translate  translate.c  translate.h  types3.1.h
Tutorial/: 2D.par.dat_new  Energy.txt  colormap2d.m  inpTra  inpTraSFG  input1D  input2D  input2DSFG  inputAnalyse  inputSFG  makefile  plot2d.m  randomlib.h  run  runSFG  script1D  script2D  scriptAnalyse  scriptTest  slurm-142454.out  stochastic  stochastic.c  stochasticSFG  stochasticSFG.c
doc/: CMakeLists.txt  Merged2016.bib  My_Library.bib  NISE.tex  NISE3.1.tex  developers.tex  file_structure.eps  file_structure.fig  input.tex  installation.tex  tableofcontents.tex  techniques.tex  tlcpub2.bst  tutorial.tex
example/: CMakeLists.txt
example/tutorial/: CMakeLists.txt  genRaman.py  input1D  input2D  input2DIRraman  inputDOS  inputLD  inputMCFRET  inputRaman  plot  plot.gnu  plot.py  plot2D.py  plot2DIRraman.py  plotRaman.py  run.sh  script1D  script2D  scriptMPI2D  scriptMPI2DIRRaman  submit2D_MPI
example/tutorial/src/: randomlib.h  stochastic.c
example/tutorialSFG/: CMakeLists.txt  run.sh  script2D
example/tutorialSFG/src/: stochastic.c
src/: .calc_CG_2DES.c.swp  1DFFT.c  1DFFT.h  2DFFT.c  CG_subs.c  CG_subs.h  CMakeCache.txt  CMakeLists.txt  MPI_subs.c  MPI_subs.h  NISE.c  NISE.h  NISE_subs.c  NISE_subs.h  absorption.c  analyse.c  analyse.h  anisotropy.c  anisotropy.h  c_absorption.c  c_absorption.h  calc_2DES.c  calc_2DES.h  calc_2DIR.c  calc_2DIR.h  calc_2DIRraman.c  calc_2DIRraman.h  calc_CD.c  calc_CD.h  calc_CG_2DES.c  calc_CG_2DES.h  calc_DOS.c  calc_DOS.h  calc_Diffusion.c  calc_Diffusion.h  calc_FD_CG_2DES.c  calc_FD_CG_2DES.h  calc_LD.c  calc_LD.h  calc_Redfield.c  (+37 more)
src/util/: asprintf.h
